--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                 <a href="https://plus.google.com/u/1/101342083237026359205" target="_blank"><i class="fa fa-google-plus-square"></i></a>
               </div>
                <div class="col-md-4 col-sm-4 col-xs-4">
-                <a href="https://twitter.com/virendra1698" target="_blank"><i class="fa fa-twitter-square"></i></a>
+                <a href="https://twitter.com/deora1698" target="_blank"><i class="fa fa-twitter-square"></i></a>
               </div>
              <div class="col-md-4 col-sm-4 col-xs-4">
                 <a href="https://in.linkedin.com/in/virendra1698
