--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <link href="https://fonts.googleapis.com/css?family=Open+Sans%7CRaleway:400,500,800" rel="stylesheet">
 
   <!-- Font Awesome -->
-  <link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.min.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.min.css">
   <!-- Main Screen Style Sheet -->
   <link rel="stylesheet" href="css/master.css">
 
