--- a/index.html
+++ b/index.html
@@ -226,13 +226,13 @@
         <div class="screenshot">
                    <div class="row">
                      <div class="col-md-4 col-sm-4 col-xs-4">
-                       <img src="http://placehold.it/140x200" class="img-responsive" alt="placeholder">
+                       <img src="https://placehold.it/140x200" class="img-responsive" alt="placeholder">
                      </div>
                      <div class="col-md-4 col-sm-4 col-xs-4">
-                       <img src="http://placehold.it/140x200" class="img-responsive" alt="placeholder">
+                       <img src="https://placehold.it/140x200" class="img-responsive" alt="placeholder">
                      </div>
                      <div class="col-md-4 col-sm-4 col-xs-4">
-                       <img src="http://placehold.it/140x200" class="img-responsive" alt="placeholder">
+                       <img src="https://placehold.it/140x200" class="img-responsive" alt="placeholder">
                      </div>
                    </div>
                  </div>
